--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8" />
-    <link type="text/css" rel="stylesheet" href="style1.css"/>
-    <title>Charles Meyer-Hilfiger</title>
-</head>
-
-</body>
+    <body>
+        <!-- <div class="wrapper"> --> 
+            	<!-- <div class="b1"> -->
+					<h1>Charles Meyer-Hilfiger</h1>
+					Last update: December 2024.
+					<br />
+		<h1>About Me</h1>
+		<p>
+			Since november 2021, I am a PhD student in Post-Quantum cryptanalysis in the COSMIQ team at Inria Paris under the supervision of Nicolas Sendrier and Jean-Pierre Tillich. <br /> During my PhD I mainly worked on the design and analysis of new dual
+			attacks, mostly in the code-based setting but also in lattices, I am also starting to get into quantum computing.
+			<br /> <br />
+			I am looking for a postdoctoral position related to lattices or codes, ideally starting early March 2025.
+			<br /> <br />
+						You can contact me at: myfirstname[dot]meyer-hilfiger[at]inria.fr
+		</p>
+               <!-- </div> -->
+		<h1>Publications</h1>
+		My dblp page <a href="https://dblp.org/pid/326/0098.html">[dblp.org]</a>. <br /> <br />
+            <div class="row">
+                <ul class="no-bullet">
+					<li><b>Reduction from sparse LPN to LPN, Dual Attack 3.0.</b> Joint work with: K. Carrier, T. Debris-Alazard and J-P. Tillich. <i>Eurocrypt 2024.</i> <a href="https://eprint.iacr.org/2023/1852.pdf">[eprint.iacr.org]</a></li>
+					<div class="row">
+						<ul class="no-bullet">
+							<li> With an artifact available at <a href="https://github.com/meyer-hilfiger/Dual-Attack-3.0">[github.com]</a></li>
+						</ul>
+					<br />
+					<li><b>Rigorous Foundations for Dual Attacks in Coding Theory.</b> Joint work with: Jean-Pierre Tillich. <i>TCC 2023.</i> <a href="https://eprint.iacr.org/2023/1460.pdf">[eprint.iacr.org]</a></li>
+					<br />
+					<li><b>Statistical Decoding 2.0: Reducing Decoding to LPN.</b> Joint work with: K. Carrier, T. Debris-Alazard and J-P. Tillich. <i>Asiacrypt 2022.</i> <a href="https://eprint.iacr.org/2022/1000.pdf">[eprint.iacr.org]</a></li>
+                </ul>
+            </div>
+	
+			<br>
+		<h1>Reviewer</h1>
+			I was a subreviewer for the following conferences/journals: <br />
+			
+			<div class="row">
+                <ul class="no-bullet">
+					<li> Eurocrypt 2025 </li>
+					<li> Eurocrypt 2024, PQCrypto 2024, Crypto 2024, DCC 2024</li>
+					<li> Asiacrypt 2023 </li>
+					<li> PQCrypto 2022, Crypto 2022</li>
+                </ul>
+            </div>
+			<h1>Teaching</h1>
+			I had a tutorial contract (mission d’enseignement) with Sorbonne-University for 192 hours over 3 years (2021-2024).  <br />
+                    <ul class="no-bullet">
+                        <li><b> Data Structure</b>, LU2IN006, Second year students (L2), 2023 & 2024. </li>
+						<li><b> Computer Architecture</b>, LU3IN029, Third year students (L3), 2023.  </li>
+						<li><b> Introduction to Cryptology</b>, LU3IN024, Third year students (L3), 2022. </li>
+						<li><b> Computability and Decidability</b>, LU3IN030, Third year students (L3), 2022. </li>
+						<li><b> Discrete Mathematics</b>, LU2IN005, Second year students (L2), 2021. </li>
+                    </ul>
+      <!-- </div>-->
+    </body>
 </html>
