--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 					<br />
 		<h1>About Me</h1>
 		<p>
-			Since november 2021, I am a PhD student in Post-Quantum cryptanalysis in the COSMIQ team at Inria Paris under the supervision of Nicolas Sendrier and Jean-Pierre Tillich. <br /> During my PhD I mainly worked on the design and analysis of new dual
+			Since november 2021, I have been a PhD student in Post-Quantum cryptanalysis in the COSMIQ team at Inria Paris under the supervision of Nicolas Sendrier and Jean-Pierre Tillich. <br /> During my PhD I mainly worked on the design and analysis of new dual
 			attacks, mostly in the code-based setting but also in lattices, I am also starting to get into quantum computing.
 			<br /> <br />
 			I am looking for a postdoctoral position related to lattices or codes, ideally starting early March 2025.
