--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 						<ul class="no-bullet">
 							<li> With an artifact available at <a href="https://github.com/meyer-hilfiger/Dual-Attack-3.0">[github.com]</a></li>
 						</ul>
+					</div>
 					<br />
 					<li><b>Rigorous Foundations for Dual Attacks in Coding Theory.</b> Joint work with: Jean-Pierre Tillich. <i>TCC 2023.</i> <a href="https://eprint.iacr.org/2023/1460.pdf">[eprint.iacr.org]</a></li>
 					<br />
