--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
         <!-- <div class="wrapper"> --> 
             	<!-- <div class="b1"> -->
 					<h1>Charles Meyer-Hilfiger</h1>
-					Last update: December 2024.
+					Last update: October 2024.
 					<br />
 		<h1>About Me</h1>
 		<p>
-			Since november 2021, I have been a PhD student in Post-Quantum cryptanalysis in the COSMIQ team at Inria Paris under the supervision of Nicolas Sendrier and Jean-Pierre Tillich. <br /> During my PhD I mainly worked on the design and analysis of new dual
-			attacks, mostly in the code-based setting but also in lattices, I am also starting to get into quantum computing.
-			<br /> <br />
-			I am looking for a postdoctoral position related to lattices or codes, ideally starting early March 2025.
-			<br /> <br />
-						You can contact me at: myfirstname[dot]meyer-hilfiger[at]inria.fr
+			I am a postdoctoral researcher in the Capsule team at Irisa, Rennes. My research field is code- and lattice-based cryptography. Previously, I was a PhD student in the COSMIQ team at Inria Paris under the supervision of Nicolas Sendrier and Jean-Pierre Tillich. During my PhD I worked on the design and analysis of new dual attacks against the decoding problem. <br />
+			You can contact me at: myfirstname[dot]meyer-hilfiger[at]inria.fr
 		</p>
                <!-- </div> -->
 		<h1>Publications</h1>
 		My dblp page <a href="https://dblp.org/pid/326/0098.html">[dblp.org]</a>. <br /> <br />
             <div class="row">
                 <ul class="no-bullet">
+					<li><b>Assessing the Impact of a Variant of MATZOV's Dual Attack on Kyber. </b> Joint work with: K. Carrier, T. Debris-Alazard and J-P. Tillich. <i> Crypto 2025.</i> <a href="https://eprint.iacr.org/2022/1750.pdf">[eprint.iacr.org]</a></li>
+					<br />
 					<li><b>Reduction from sparse LPN to LPN, Dual Attack 3.0.</b> Joint work with: K. Carrier, T. Debris-Alazard and J-P. Tillich. <i>Eurocrypt 2024.</i> <a href="https://eprint.iacr.org/2023/1852.pdf">[eprint.iacr.org]</a></li>
 					<div class="row">
 						<ul class="no-bullet">
