--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		My dblp page <a href="https://dblp.org/pid/326/0098.html">[dblp.org]</a>. <br /> <br />
             <div class="row">
                 <ul class="no-bullet">
-					<li><b>Assessing the Impact of a Variant of MATZOV's Dual Attack on Kyber. </b> Joint work with: K. Carrier, T. Debris-Alazard and J-P. Tillich. <i> Crypto 2025.</i> <a href="https://eprint.iacr.org/2022/1750.pdf">[eprint.iacr.org]</a></li>
+					<li><b>Assessing the Impact of a Variant of MATZOV's Dual Attack on Kyber. </b> Joint work with: K. Carrier, Y. Shen and J-P. Tillich. <i> Crypto 2025.</i> <a href="https://eprint.iacr.org/2022/1750.pdf">[eprint.iacr.org]</a></li>
 					<br />
 					<li><b>Reduction from sparse LPN to LPN, Dual Attack 3.0.</b> Joint work with: K. Carrier, T. Debris-Alazard and J-P. Tillich. <i>Eurocrypt 2024.</i> <a href="https://eprint.iacr.org/2023/1852.pdf">[eprint.iacr.org]</a></li>
 					<div class="row">
