--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             </div>
 	
 			<br>
+		<h1>PhD</h1>
+		I defended my PhD on September 30, 2025, at Inria Paris. Here is the <a href="PhD-Meyer-Hilfiger.pdf" target="_blank">manuscript</a> and here are the <a href="PhD-Defense-Meyer-Hilfiger.pdf" target="_blank">slides</a>.
 		<h1>Reviewer</h1>
 			I was a subreviewer for the following conferences/journals: <br />
 			
