--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- <div class="wrapper"> --> 
             	<!-- <div class="b1"> -->
 					<h1>Charles Meyer-Hilfiger</h1>
-					Last update: October 2025.
+					Last update: November 2025.
 					<br />
 		<h1>About Me</h1>
 		<p>
@@ -12,10 +12,13 @@
 			You can contact me at: myfirstname[dot]meyer-hilfiger[at]inria.fr
 		</p>
                <!-- </div> -->
-		<h1>Publications</h1>
+		<h1>Publications and preprint</h1>
 		My dblp page <a href="https://dblp.org/pid/326/0098.html">[dblp.org]</a>. <br /> <br />
             <div class="row">
                 <ul class="no-bullet">
+					<li><b>Proving Modern Code-Based Dual Attacks </b> <i> (Soon on ePrint) </i> <a href="preliminary-ProvingModernDualattack.pdf" target="_blank">[Early draft]</a>
+					</li>
+					<br />
 					<li><b>Assessing the Impact of a Variant of MATZOV's Dual Attack on Kyber. </b> Joint work with: K. Carrier, Y. Shen and J-P. Tillich. <i> Crypto 2025.</i> <a href="https://eprint.iacr.org/2022/1750.pdf">[eprint.iacr.org]</a></li>
 					<br />
 					<li><b>Reduction from sparse LPN to LPN, Dual Attack 3.0.</b> Joint work with: K. Carrier, T. Debris-Alazard and J-P. Tillich. <i>Eurocrypt 2024.</i> <a href="https://eprint.iacr.org/2023/1852.pdf">[eprint.iacr.org]</a></li>
